--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "/dist"
   ],
   "description": "Zero dependency Svelte form validation library",
+  "keywords": [
+    "svelte",
+    "form",
+    "validation"
+  ],
   "scripts": {
     "build": "rollup -c",
     "prod": "rimraf dist && npm run build && cpy package.json dist && cd dist && npm pack"
   },
-  "author": "Thilanka N. Liyanaarachchi",
-  "license": "ISC",
+  "author": "Thilanka N. Liyanaarachchi <thilanka.nuwan89@gmail.com> (https://zirconlabz.com)",
+  "license": "MIT",
   "devDependencies": {
     "cpy-cli": "^3.1.1",
     "rimraf": "^3.0.2",
