--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@slimkit-ui/svelte-forms",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "dist/index.js",
   "files": [
     "/dist"
@@ -13,6 +13,8 @@
   ],
   "scripts": {
     "build": "rollup -c",
+    "start": "sirv test/public --single",
+    "dev": "rollup -c test/rollup.config.js -w",
     "prod": "rimraf dist && npm run build && cpy package.json dist && cd dist && npm pack"
   },
   "author": "Thilanka N. Liyanaarachchi <thilanka.nuwan89@gmail.com> (https://zirconlabz.com)",
@@ -21,6 +23,12 @@
     "cpy-cli": "^3.1.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.35.1",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-svelte": "^7.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "sirv-cli": "^1.0.11",
+    "svelte": "^3.35.0",
+    "svelte-preprocess": "^4.6.9"
   }
 }
